Fix Allure steps via custom AspectJ